@@ -15,7 +15,7 @@ namespace Bannerlord.ButterLib.Implementation.MBSubModuleBaseExtended
     {
         public static MBSubModuleBaseExSubSystem? Instance { get; private set; }
         public string Id => "MBSubModuleBase extended";
-        public string Description => "Introduces a MBSubModuleBase-derived abstract class, that provides new SubModule events.";
+        public string Description => "Mod Developer feature!  Introduces a MBSubModuleBase-derived abstract class, that provides new SubModule events.";
         public bool IsEnabled { get; private set; }
         public bool CanBeDisabled => true;
         public bool CanBeSwitchedAtRuntime => false;
