@@ -10,7 +10,7 @@ namespace Bannerlord.ButterLib.Implementation.ObjectSystem
         public static ObjectSystemSubSystem? Instance { get; private set; }
 
         public string Id => "Object System";
-        public string Description => "";
+        public string Description => "Mod Developer feature!";
         public bool IsEnabled { get; private set; }
         public bool CanBeDisabled => true;
         public bool CanBeSwitchedAtRuntime => false;
