@@ -1,5 +1,4 @@
-﻿using Bannerlord.BUTR.Shared.Helpers;
-using Bannerlord.ButterLib.Implementation.SaveSystem.Patches;
+﻿using Bannerlord.ButterLib.Implementation.SaveSystem.Patches;
 using Bannerlord.ButterLib.SubSystems;
 
 using HarmonyLib;
@@ -11,7 +10,11 @@ namespace Bannerlord.ButterLib.Implementation.SaveSystem
         public static SaveSystemSubSystem? Instance { get; private set; }
 
         public string Id => "Save System";
-        public string Description => "Extends and fixes the game's save system";
+        public string Description => @"Extends and fixes the game's save system:
+* Fixes possible collision with save names;
+* Fixes save corruption & crashes when duplicate types are defined;
+* Adds support for saving many more container types;
+This might alter the save file, disabling the feature might render the save file unloadable!";
         public bool IsEnabled { get; private set; }
         public bool CanBeDisabled => true;
         public bool CanBeSwitchedAtRuntime => false;
