@@ -5,7 +5,7 @@ namespace Bannerlord.ButterLib.DelayedSubModule
     internal class DelayedSubModuleSubSystem : ISubSystem
     {
         public string Id => "Delayed SubModule";
-        public string Description => "Provides helpers to run methods after SubModule events.";
+        public string Description => "Mod Developer feature! Provides helpers to run methods after SubModule events.";
         public bool IsEnabled => true;
         public bool CanBeDisabled => false;
         public bool CanBeSwitchedAtRuntime => false;
