@@ -2,8 +2,9 @@
 Version: 2.6.0
 Game Versions: v1.0.0,v1.0.1,v1.0.2
 * StoryMode is now an optional dependency
-* Support for including save file and screenshot with local a crash report
+* Support for including save file and screenshot with a local crash report
 * MiniDump inclusion decision moved from settings to the crash report
+* Better SubSystem descriptions
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.1
 Game Versions: v1.0.0,v1.0.1
